🐛 Fix issue with light/dark mode button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -326,9 +326,6 @@
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
-  .mr-2 {
-    margin-right: calc(var(--spacing) * 2);
-  }
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
   }
